--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ org.gradle.jvmargs = -Xmx3G
 # Mod Information
 mod_version = 1.0
 maven_group = com.wdcftgg
-archives_base_name = wdcftgglib
+mod_id = wdcftgglib
+archives_base_name = WdcftggLib
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
